...
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

//CardInputField
"card_number_label" = "Card number";
"long_card_number" = "Long card number";

//SecurityCodeInputField
"please_reenter_the_card_security_code" = "Re-enter security code";
"security_code" = "Security code";

...
"issue_number_front_of_card" = "Issue number on front of card";

//DateInputField
"check_expiry_date" = "Check expiry date";
"check_start_date" = "Check start date";
"start_date_label" = "Start date";
"expiry_date_label" = "Expiry date";
"date_hint" = "MM/YY";
"date_format" = "MM/yy";

//PostcodeInputField
"billing_postcode" = "Billing postcode";
"billing_zip_code" = "Billing ZIP code";
...
"united_states" = "USA";
"canada" = "Canada";
"other_country" = "Other";

//JudoPayViewController
"secure_server" = "Secure server: ";
"pay" = "Pay";

//JudoPaymentMethodsViewController
"payment_method" = "Payment Method";
"select_payment_method" = "Please select from one of the payment methods listed below:";
"card_payment" = "Card Payment";

//NSError+Judo
"unable_to_process_request_error_desc" = "Sorry, we're currently unable to process this request.";
"unable_to_process_request_error_title" = "Unable to process";
"error_request_failed" = "The request responded without data";
"error_payment_method_missing" = "The payment method (card details, token or PKPayment) has not been set for a transaction that requires it (custom UI)";
...
"check_card_number" = "Check card number";
"error_card_not_supported" = "We do not accept %@";

//JPTheme
"add_card" = "Add card";
"add" = "Add";
"back" = "Back";
"payment" = "Payment";
"refund" = "Refund";
"authentication" = "Authentication";
"adding_card" = "Adding card...";
"processing_payment" = "Processing payment...";
"redirecting" = "Redirecting...";
"verifying_payment" = "Verifying payment";
...
