...
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWu-ea-bHu">
                    <rect key="frame" x="167" y="629" width="41" height="30"/>
                    <state key="normal" title="Home"/>
                    <connections>
                        <action selector="homeButtonHandler:" destination="-1" eventType="touchUpInside" id="H0x-o2-OeR"/>
                    </connections>
                </button>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9lb-My-FVs">
                    <rect key="frame" x="16" y="214" width="335" height="1"/>
...
